Cleaned up UI, icons have been added to do: fix alignment of home text with icons popups table buttons

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap');
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 
 
@@ -23,7 +18,7 @@
   
 }
 .sidebar { 
-  padding:5px;
+  padding:10px;
   grid-area: sidebar; 
   background-color:#A67438;
   
@@ -53,23 +48,31 @@
   background-color:#A67438;
 
 }
-.nav #home_text{
+/* .nav #home_text{
   
   margin-left:2vw;
   font-weight:600;
   font-size:33px;
 
-}
+} */
 .nav ul{
   list-style:none;
   padding-left:0;
-  margin-left:160vh;
+  margin-left:70vw;
 }
 .nav ul li{
   display:inline;
   padding:5px;
   
 }
+#first{
+  position:absolute;
+  margin-right:10vw;
+  font-weight:600;
+  font-size:44px;
+  right:65vw;
+}
+
 .content { 
   padding:5px;
   grid-area: content; 
@@ -79,7 +82,7 @@
   overflow-y:scroll;
   
 }
-.inner{
+/* .inner{
   position:relative;
   top:-5px;
   left:-5px;
@@ -92,11 +95,11 @@
     "date item brand product stock status sales revenue ave";
   height:100%;
   overflow-x:scroll;
-}
-.inner div{
+} */
+/* .inner div{
   text-transform:uppercase;
-}
-.outer{
+} */
+/* .outer{
   background:#DD9D34;
   position:relative;
   top:-5px;
@@ -133,4 +136,4 @@
 }
 .ave{
   background:red;
-}
+} */
